--- a/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
+++ b/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 20:17:22 GMT
+    - Sat, 21 Oct 2017 19:59:41 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=vcbkvbrel5v7l9fi65h44j9s83; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 20:17:23 GMT
+recorded_at: Sat, 21 Oct 2017 19:59:41 GMT
