--- a/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
+++ b/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 21:41:34 GMT
+    - Sat, 21 Oct 2017 20:11:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r9p65f7q55bvcuaqpv2l3bp2k1; path=/
+    - PHPSESSID=r66aft8i177472lmt45vet9sp6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 21:41:34 GMT
+recorded_at: Sat, 21 Oct 2017 20:11:54 GMT
