--- a/house.gov.by/6f319797d4921c2bb63765639a9d085b08037c0e.yml
+++ b/house.gov.by/6f319797d4921c2bb63765639a9d085b08037c0e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 20:46:28 GMT
+    - Sat, 21 Oct 2017 20:21:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ppqjgmltej9popd84h8saog0p5; path=/
+    - PHPSESSID=90odbug4uvmn3q4pock1am3cp3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 20:46:29 GMT
+recorded_at: Sat, 21 Oct 2017 20:21:41 GMT
