--- a/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
+++ b/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 21:22:17 GMT
+    - Sat, 21 Oct 2017 20:25:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=6okkhul641iqqsmct22vb15e76; path=/
+    - PHPSESSID=a4lhcahi3m1nisvli552fvs0k3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 21:22:18 GMT
+recorded_at: Sat, 21 Oct 2017 20:25:46 GMT
