--- a/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
+++ b/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 21:15:42 GMT
+    - Sat, 21 Oct 2017 20:38:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=7lt82n41efq4v0qmuq6oua0v72; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 21:15:43 GMT
+recorded_at: Sat, 21 Oct 2017 20:38:17 GMT
