--- a/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
+++ b/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 20:28:54 GMT
+    - Sat, 21 Oct 2017 20:38:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=586jp37t6q7oopb810sj29qak5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 20:28:54 GMT
+recorded_at: Sat, 21 Oct 2017 20:38:50 GMT
