--- a/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
+++ b/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 20:20:35 GMT
+    - Sat, 21 Oct 2017 20:49:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=2iqk73s0b4l49il0lfvjc5aet6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 20:20:35 GMT
+recorded_at: Sat, 21 Oct 2017 20:49:39 GMT
