--- a/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.yml
+++ b/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 20:37:26 GMT
+    - Sat, 21 Oct 2017 20:51:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=n8odns5kspc9vtt0kugp30krq3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 20:37:26 GMT
+recorded_at: Sat, 21 Oct 2017 20:51:53 GMT
