--- a/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
+++ b/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:43:41 GMT
+    - Sat, 21 Oct 2017 20:53:11 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gf8u2gdgqbh01r2u1j90iujqs2; path=/
+    - PHPSESSID=br4b0k3k04u7u5156bg6ov3fe7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:43:42 GMT
+recorded_at: Sat, 21 Oct 2017 20:53:12 GMT
