--- a/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
+++ b/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 20:45:19 GMT
+    - Sat, 21 Oct 2017 21:16:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=g04bn7bvr3pdijoj4ll25dosl4; path=/
+    - PHPSESSID=barf8d1ur3dfp3vapcbe3eh112; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 20:45:20 GMT
+recorded_at: Sat, 21 Oct 2017 21:16:45 GMT
