--- a/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
+++ b/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:30:12 GMT
+    - Sat, 21 Oct 2017 21:18:02 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=huk5igdll0ms58p6f78s6blfa1; path=/
+    - PHPSESSID=q3nbjas8u83vj8l0hlhtlvj4f4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:30:13 GMT
+recorded_at: Sat, 21 Oct 2017 21:18:02 GMT
