--- a/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
+++ b/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:22:55 GMT
+    - Sat, 21 Oct 2017 21:19:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=hrc76bns17fdipmlvmado35n27; path=/
+    - PHPSESSID=pvvqnl259g9fi1lhm825kh0tf0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:22:57 GMT
+recorded_at: Sat, 21 Oct 2017 21:19:22 GMT
