--- a/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
+++ b/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 20:20:06 GMT
+    - Sat, 21 Oct 2017 21:24:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=mjanmimep9mb0gara04m3bpsp2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 20:20:06 GMT
+recorded_at: Sat, 21 Oct 2017 21:24:31 GMT
