--- a/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
+++ b/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:42:46 GMT
+    - Sat, 21 Oct 2017 21:51:07 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=b1mvpkf10uvlr6rnr26uddh570; path=/
+    - PHPSESSID=3ed79vgu19n4dp6sne1dtgglk2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:42:47 GMT
+recorded_at: Sat, 21 Oct 2017 21:51:08 GMT
