--- a/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.yml
+++ b/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:22:31 GMT
+    - Sat, 21 Oct 2017 21:52:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=74k9mk2o36i506uau6rtq8mov1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:22:31 GMT
+recorded_at: Sat, 21 Oct 2017 21:52:59 GMT
