--- a/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
+++ b/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 20:00:58 GMT
+    - Sat, 21 Oct 2017 22:00:05 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=aciipr1m7ma6a1brnar3hp7mf2; path=/
+    - PHPSESSID=9kuocgled5pl0g4avftj6klhh5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 20:00:58 GMT
+recorded_at: Sat, 21 Oct 2017 22:00:06 GMT
