--- a/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
+++ b/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 20:39:48 GMT
+    - Sat, 21 Oct 2017 22:04:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=uaq13ntom5bpmjo4nh992krvk0; path=/
+    - PHPSESSID=e0826tu3iu63sofqfute5qtgi1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 20:39:49 GMT
+recorded_at: Sat, 21 Oct 2017 22:05:00 GMT
