--- a/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
+++ b/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:57:57 GMT
+    - Sat, 21 Oct 2017 22:14:35 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=au1ns1nlha6osfloodniaf0e41; path=/
+    - PHPSESSID=1fen6bn6bdhpsilpkfq6gien81; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:57:58 GMT
+recorded_at: Sat, 21 Oct 2017 22:14:36 GMT
