--- a/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
+++ b/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 19:26:24 GMT
+    - Sat, 21 Oct 2017 22:15:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bpqecsumisa5l0ctrrr7lu9f21; path=/
+    - PHPSESSID=7ctc1q9dng9sjcus4u7gpekgn3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 19:26:25 GMT
+recorded_at: Sat, 21 Oct 2017 22:15:02 GMT
