--- a/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
+++ b/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 21:33:48 GMT
+    - Sat, 21 Oct 2017 22:28:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r9p09r3pm2kdutrb25oiglvus5; path=/
+    - PHPSESSID=f4oe29oot30surttisbblppbh1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 21:33:48 GMT
+recorded_at: Sat, 21 Oct 2017 22:28:32 GMT
