--- a/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
+++ b/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 21:34:55 GMT
+    - Sat, 21 Oct 2017 22:38:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=b19h8i21k7vscaggg0gnn9pc42; path=/
+    - PHPSESSID=drpc0kitobvrj2oeel136r1c03; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 21:34:55 GMT
+recorded_at: Sat, 21 Oct 2017 22:38:31 GMT
