--- a/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
+++ b/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 20:47:53 GMT
+    - Sat, 21 Oct 2017 22:48:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=v02f060vtpsic6auooq3j8c884; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 20:47:54 GMT
+recorded_at: Sat, 21 Oct 2017 22:48:30 GMT
