--- a/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
+++ b/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 21:14:30 GMT
+    - Sat, 21 Oct 2017 22:49:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=rsq0qrqbo5jt3qnk4f9amata20; path=/
+    - PHPSESSID=rjiollfo69481ehg21vtrvueb5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 21:14:30 GMT
+recorded_at: Sat, 21 Oct 2017 22:49:13 GMT
