--- a/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
+++ b/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:21:28 GMT
+    - Sat, 21 Oct 2017 22:50:36 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9015f36i7qoiv3qp36ng2b6315; path=/
+    - PHPSESSID=c4vdav28tcrbucmj2hacmfebl6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:21:29 GMT
+recorded_at: Sat, 21 Oct 2017 22:50:37 GMT
